# conlanger

./: LICENSE  README.md  pyproject.toml
notebooks/: .gitignore  consonants_plumonic.csv  explore_phoible.ipynb  explore_wals.ipynb  generate_language.ipynb  generate_lexicon.ipynb  language_phoneme_analysis.ipynb  phoneme_data_representation.ipynb  phoneme_gan.ipynb  predict_languages.ipynb  prepare_language_names.ipynb  prepare_phoible_data.ipynb  prepare_phoible_data_copy copy.ipynb  prepare_phoible_data_copy.ipynb  syllable_structure.ipynb  wals_parameters_gan.ipynb  word_list.ipynb
notebooks/data/: consonants_coarticulated.csv  consonants_non_plumonic.csv  consonants_non_plumonic.npy  consonants_plumonic.csv  consonants_plumonic.npy  consonants_plumonic_wikipedia.csv  generated_language_parameters.npz  generated_languages.npz  ipa_diacritics.csv  language_names.npy  language_parameters.npz  language_phonemes.npz  language_phonemes_all.npz  sound_change.txt  sound_change_abbreviations.txt  vowels.csv  vowels.npy
notebooks/data/uld/: README.md  abbreviations.csv  annotated_word_list.csv  topics.csv  word_list.csv
src/conlanger/: utils.py
src/conlanger/data/: __init__.py  syllable_structure.csv  syllable_structure.py
src/conlanger/models/: WGANGP.py  __init__.py
src/conlanger/tools/: Lexicon.py  SyllableStructure.py  __init__.py
tests/conlanger/: test_utils.py
tests/conlanger/tools/: test_Lexicon.py  test_SyllableStructure.py
