[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "conlanger"
dynamic = ["version"]
requires-python = ">= 3.8"

dependencies = [
    "cldfbench_wals @ git+https://github.com/cldf-datasets/wals.git@v2020#egg=cldfbench_wals",
]

[project.optional-dependencies]
testing = ["pytest", "pytest-cov", "pytest-mock", "ipykernel"]

[tool.setuptools.dynamic]
version = { attr = "conlanger.__VERSION__" }

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests", "notebooks"]

[tool.pytest.ini_options]
testpaths = "tests"
addopts = ["--cov=src", "--cov-report=html"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
fail_under = 95
skip_empty = true
